# ppt-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: profiles.example.json
docs/: configuration.md  getting-started.md  index.md  remote-mcp-prd.md  remote-mcp-tool-contracts.md  usage-modes.md
src/ppt_mcp/: __init__.py  __main__.py  api_client.py  remote_catalog.py  remote_profiles.py  remote_server.py  remote_service.py  remote_settings.py  route_config.py  server.py  settings.py  source_store.py
tests/: test_api_client_paths.py  test_route_behavior.py
