[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ppt-mcp"
version = "0.1.0"
description = "Local-first MCP wrapper for the ppt PDF-to-PPT API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.17.0,<2",
  "starlette>=0.37,<1",
  "uvicorn>=0.30,<1",
]

[project.scripts]
ppt-mcp = "ppt_mcp.server:main"
ppt-mcp-remote = "ppt_mcp.remote_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ppt_mcp"]
